    + [RA] Policy now mandates FHS 2.3.  Update tag descriptions.
    + [RA] Warn about files installed in /usr/lib/cgi-bin.  Policy now
      states they should be installed in /usr/lib/cgi-lib.
    + [RA] Warn about scripts installed on the user's PATH with names that
      include language extensions (.sh, .pl, .py), per Policy 10.4.
  * checks/scripts:
    + [RA] Debian etch release policy explicitly forbids scripts without
      #! magic and they rely on being run from a shell.  Revert the change
      that permitted the Perl magic without a #! line.  Thanks to Piotr
      Engelking and Steve Langasek for pointing this out.
    + [RA] Don't syntax-check *.dpatch scripts in /usr/src.  bash -n
      doesn't stop at exit 0 and then may choke on the patch.  Thanks,
      Matthias Klose.  (Closes: #364521)
  * checks/scripts.desc:
    + [RA] Using invoke-rc.d is now required by Policy.
  * checks/standards-version:
    + [RA] Update to 3.7.0.

  * debian/control:
    + [RA] Update standards version to 3.7.0 (no changes required).
    + [RA] Update description to note calibration for Policy 3.7.0.

 -- Russ Allbery <rra@debian.org>  Thu, 27 Apr 2006 10:30:09 -0700

lintian (1.23.18) unstable; urgency=low

  The "brown paper Python" release

  * checks/fields{.desc,}:
    + [RA] Redo handling of build dependencies to allow a custom tag to be
      specified and to allow a general dependency string to be required
      rather than a simple package name.  As a result, dh_python handling
      is no longer a buggy special case.  Allow either python or
      python-dev for dh_python and the cdbs Python rules.  Thanks, Torsten
      Merek and Aaron M. Ucko.  (Closes: #364297, #364330)
    + [RA] Require at least quilt 0.40 if /usr/share/quilt/quilt.make is
      included.  Thanks, Michele Baldessari.
    + [RA] Packages using dh_installxfonts must build-depend on 5.0.31 or
      later of debhelper for the X.Org 7 transition.
