@@ -131,6 +131,13 @@ Tag: file-in-opt
 Type: error
 Info: The package installs a file in <tt>/opt/...</tt> which is not allowed.
 
+Tag: stray-directory-in-manpage-directory
+Type: error
+Info: This package installs a directory under <tt>/usr/share/man</tt> or
+ <tt>/usr/X11R6/man</tt> that isn't a manual section directory or locale
+ directory.
+Ref: fhs 4.11.5
+
 Tag: executable-manpage
 Type: error
 Info: Manual pages are not meant to be executed.
