@@ -40,15 +40,17 @@ binary-indep:
 	touch $(tmp)/usr/X11R6/man/man6/X11R6-binary.man
 	chmod 644 $(tmp)/usr/X11R6/man/man6/X11R6-binary.man
 	touch $(tmp)/usr/share/man/de/man1/binary-without-english-manpage.1
-	chmod 644 $(tmp)/usr/share/man/de/man1/binary-without-english-manpage.1
+	chmod 755 $(tmp)/usr/share/man/de/man1/binary-without-english-manpage.1
 	gzip -c9 <test.1p.de >$(tmp)/usr/share/man/de/man1/test-latin1-chars.1p.gz
 
 	gzip -c9 <include.3 >$(tmp)/usr/share/man/man3/include.3.gz
 	gzip -c9 <included.3 >$(tmp)/usr/share/man/man3/included.3.gz
 
+	install -d $(tmp)/usr/share/man/man1/not-a-man-page.1.gz
+
 	install -d $(tmp)/usr/share/lintian/overrides
 	install -m644 debian/overrides $(tmp)/usr/share/lintian/overrides/manpages
-	
+
 	install -d $(tmp)/usr/share/doc/manpages
 	cp debian/changelog $(tmp)/usr/share/doc/manpages/changelog
 	gzip -9 $(tmp)/usr/share/doc/manpages/changelog
