@@ -6,6 +6,7 @@ E: manpages: empty-manual-page usr/share/man/man1/usr-bin-binary-alt.1.gz
 E: manpages: empty-manual-page usr/share/man/man1/usr-bin-binary.1
 E: manpages: empty-manual-page usr/share/man/man1/usr-sbin-binary.1.gz
 E: manpages: empty-manual-page usr/share/man/man6/usr-games-binary.6.gz
+E: manpages: executable-manpage usr/share/man/de/man1/binary-without-english-manpage.1
 E: manpages: manpage-has-wrong-extension usr/X11R6/man/man6/X11R6-binary.man
 E: manpages: manpage-not-compressed usr/X11R6/man/man6/X11R6-binary.man
 E: manpages: manpage-not-compressed usr/share/man/de/man1/binary-without-english-manpage.1
@@ -22,6 +23,7 @@ E: manpages: package-installs-file-to-usr-x11r6 usr/X11R6/man/man6/
 E: manpages: package-installs-file-to-usr-x11r6 usr/X11R6/man/man6/X11R6-binary.man
 E: manpages: package-installs-file-to-usr-x11r6-bin usr/X11R6/bin/
 E: manpages: package-installs-file-to-usr-x11r6-bin usr/X11R6/bin/rstartd
+E: manpages: stray-directory-in-manpage-directory usr/share/man/man1/not-a-man-page.1.gz/
 E: manpages: x11-games-should-be-in-usr-games usr/X11R6/man/man6/X11R6-binary.man
 W: manpages source: ancient-standards-version 3.2.1
 W: manpages source: binary-nmu-debian-revision-in-source 4-0.0.1
@@ -31,6 +33,7 @@ W: manpages: binary-without-english-manpage binary-without-english-manpage
 W: manpages: executable-not-elf-or-script ./usr/bin/binary-without-english-manpage
 W: manpages: executable-not-elf-or-script ./usr/bin/usr-bin-binary-alt
 W: manpages: executable-not-elf-or-script ./usr/sbin/usr-sbin-binary
+W: manpages: executable-not-elf-or-script ./usr/share/man/de/man1/binary-without-english-manpage.1
 W: manpages: link-to-undocumented-manpage usr/share/man/man1/bin-binary.1.gz
 W: manpages: link-to-undocumented-manpage usr/share/man/man3/function.3.gz
 W: manpages: manpage-has-bad-whatis-entry usr/X11R6/man/man1/rstartd.1x.gz
